--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
            
             <header>
-                <h1>Registration Form</h1>
+                <h1>SRK Fan and Welfare Association</h1>
                 
             </header>
             <section>               
